<?xml version="1.0" encoding="utf-8"?>
<!--
      Copyright (C) 2012 CONIT Co., Ltd.
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
-->

<resources>

    <string name="app_name">SSSプッシュ</string>
    <string name="registting">登録中…</string>
    <string name="unregistting">登録解除中…</string>

    <!-- SettingsActivity -->
    <string name="notice">Copyright (C) 2012 CONIT Co., Ltd.</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="mid_sendserver_failed">MIDをSamuraiNotificationServerへ送信できませんでした。</string>
    <string name="mid_send_server_succeeded">MIDをSamuraiNotificationServerへ送信しました。</string>
    <string name="push_regist_failed_gcm">GCMへの端末登録に失敗しました。</string>
    <string name="push_regist_failed_sn">SamuraiNotificationServerへのデバイストークンの登録に失敗しました。</string>
    <string name="push_regist_succeeded">プッシュ通知の登録に成功しました。</string>
    <string name="push_unregist_succeeded">プッシュ通知を無効にしました。</string>
    <string name="push_unregist_failed">プッシュ通知の無効に失敗しました。</string>
    <string name="select_tag">タグ選択：</string>
    <string name="setting_locale">言語設定：</string>
    <string name="change_font_size">オプション：フォントサイズ変更</string>
    <string name="change_font_size_msg">このテキストのフォントサイズが変わります。</string>
    <string name="cancel_regist">登録が不正です。登録をキャンセルして下さい。</string>

    <!-- MessagesActivity -->
    <string name="no_messages">通知履歴はありません</string>
    
    <!-- Dialog Message -->
    <string name="dialog_err_network">ネットワークエラー</string>
    <string name="dialog_err_push_messages">プッシュ通知情報の取得に失敗しました。\nネットワークの確認後、再度画面を表示して下さい。</string>
    <string name="dialog_ok">OK</string>
    <string name="checkbox_web">Web</string>
    <string name="checkbox_text">Text</string>
</resources>