<?xml version="1.0" encoding="utf-8"?>
<!--
      Copyright (C) 2012 CONIT Co., Ltd.
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/btn_messages"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_message_history_selector" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" >

            <TextView
                android:id="@+id/TextView1"
                style="@style/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/select_tag" />

            <CheckBox
                android:id="@+id/checkbox_web"
                style="@style/setting_checkbox"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/checkbox_web" />

            <CheckBox
                android:id="@+id/checkbox_text"
                style="@style/setting_checkbox"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkbox_web"
                android:text="@string/checkbox_text" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_locale" />

            <TextView
                android:id="@+id/text_locale"
                style="@style/setting_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_set_locale"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/btn_locale_setting_selector" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/notice"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>